# rust-boilerplate

./: Cargo.toml  README.md
migration/src/: m20220101_000001_create_table.rs
src/: main.rs
src/modules/item/: mod.rs
src/modules/item/domain/: mod.rs
src/modules/item/domain/use_cases/: create_use_case.rs  create_use_case_trait.rs  list_use_case.rs  list_use_case_trait.rs  mod.rs
src/modules/item/infrastructure/: mod.rs
src/modules/item/infrastructure/schemas/: item_sea_orm_schema.rs  mod.rs
src/modules/item/presentation/: mod.rs
src/modules/item/presentation/controllers/: item_controller.rs  mod.rs
src/modules/item/presentation/routes/: item_route.rs  mod.rs
src/shared/: mod.rs
src/shared/infrastructure/: create_sea_orm_connection.rs  mod.rs
