[package]
name = "rust-experience"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5.1"
uuid = { version = "1.8.0", features = ["serde", "v4"] }
dotenv = "0.15.0"
sea-orm = { version = "0.12.2", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "with-json", "with-uuid"] }
log = "0.4.21"
